--- a/Carrier Objective.html
+++ b/Carrier Objective.html
@@ -8,7 +8,7 @@
         <button class="button2"><a href="About.html"><span id="button2">About</span></a></button>
        
 
-        <button class="button4"><a href="contact.html"><span id="button4">Contact</span></a></button>
+        <button class="button4"><a href="Contact.html"><span id="button4">Contact</span></a></button>
         <button class="button5"><a href="CV.html"><span id="button4">CV</span></a></button>
     </center>
     <body>
