--- a/CV.html
+++ b/CV.html
@@ -11,7 +11,7 @@
     <button class="button2"><a href="About.html"><span id="button2">About</span></a></button>
     <button class="button3"><a href="Carrier Objective.html"><span id="button3">Carrier</span></a></button>
 
-    <button class="button4"><a href="contact.html"><span id="button4">Contact</span></a></button>
+    <button class="button4"><a href="Contact.html"><span id="button4">Contact</span></a></button>
    
 </center>
 <body>
